samples/invalid/syntax/bad_asm_result.g
language g0

asm.result = hello world
